<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Declaración de DataBinding -->
    <data>
        <!-- Variable que hace referencia a la instancia de Player -->
        <variable
            name="player"
            type="dam.pmdm.gestionficheroscrash.Player" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Imagen de Crash Bandicoot -->
            <ImageView
                android:id="@+id/player_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/crash_avatar"
                app:layout_constraintBottom_toTopOf="@id/jugardor_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Nombre del jugador -->
            <LinearLayout
                android:id="@+id/jugardor_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/player_name_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={player.name}"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Nivel del jugador -->
            <LinearLayout
                android:id="@+id/level_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugardor_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/player_level_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={player.level}"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Puntuación del jugador -->
            <LinearLayout
                android:id="@+id/points_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/level_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/player_experience_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={player.experience}"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Logros adquiridos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/achievements"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkLogro1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superar_el_primer_nivel"
                    android:checked="@={player.achievement.get(0).completed}"/>

                <CheckBox
                    android:id="@+id/checkLogro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={player.achievement.get(1).completed}"
                    android:text="@string/conseguir_100_manzanas" />

                <CheckBox
                    android:id="@+id/checkLogro3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={player.achievement.get(2).completed}"
                    android:text="@string/derrotar_al_jefe_inicial" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/orange"
            app:srcCompat="@android:drawable/ic_menu_save"
            app:tint="@color/white"/>
    </FrameLayout>
</layout>